spacing corrected in stats

--- a/style.css
+++ b/style.css
@@ -485,6 +485,7 @@ h2 {
     background-color: rgba(255, 255, 255, 0.6);
     box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
     transform: skewX(-30deg);
+    text-align: center;
 }
 .tideInfoData{
     /* border: 2px solid green; */
